Updated FAQs, added glow to titles, increased font width of body text.

--- a/index.html
+++ b/index.html
@@ -427,22 +427,62 @@
 
             <div class="block">
                 <header class="question">
-                    <a href="#answer1" data-action="collapse" data-target="#answer1">
-                        Question 1 <i class="fa-solid fa-angle-down"></i>
+                    <a href="#mint" data-action="collapse" data-target="#mint">
+                        When is Minting Day? <i class="fa-solid fa-angle-down"></i>
                     </a>
                 </header>
-                <div id="answer1" class="answer is-collapsible">
-                    Answer 1
+                <div id="mint" class="block answer is-collapsible">
+                    <ul>
+                        <li>VIP LIST will start on April 28th 2022</li>
+                        <li>PUBLIC will start April 30th 2022</li>
+                    </ul>
                 </div>
             </div>
             <div class="block">
                 <header class="question">
-                    <a href="#answer2" data-action="collapse" data-target="#answer2">
-                        Question 2 <i class="fa-solid fa-angle-down"></i>
+                    <a href="#cost" data-action="collapse" data-target="#cost">
+                        How Much Will it Cost?  <i class="fa-solid fa-angle-down"></i>
                     </a>
                 </header>
-                <div id="answer2" class="answer is-collapsible">
-                    Answer 2
+                <div id="cost" class="answer is-collapsible">
+                    <ul>
+                        <li>VIP LIST will be .075Ξ + Gas</li>
+                        <li>Public will be .085Ξ + Gas</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="block">
+                <header class="question">
+                    <a href="#supply" data-action="collapse" data-target="#supply">
+                        What is the Total Supply?  <i class="fa-solid fa-angle-down"></i>
+                    </a>
+                </header>
+                <div id="supply" class="answer is-collapsible">
+                    <p class="block">There will be 10,000 MetaFashion NFT’s</p>
+                    <p>Some of the supply will be designated for contests and giveaways within our Community and to award those that help us grow.</p>
+                </div>
+            </div>
+            <div class="block">
+                <header class="question">
+                    <a href="#max" data-action="collapse" data-target="#max">
+                        What is the Max Mint?  <i class="fa-solid fa-angle-down"></i>
+                    </a>
+                </header>
+                <div id="max" class="answer is-collapsible">
+                    <ul>
+                        <li>VIP LIST will have a limit of a 3 Mint Transaction Max</li>
+                        <li>PUBLIC SALE will have a limit of 5 Mints per Transaction, for up to 3 transactions.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="block">
+                <header class="question">
+                    <a href="#giveaway" data-action="collapse" data-target="#giveaway">
+                        When will giveaway winners receive their Prizes? <i class="fa-solid fa-angle-down"></i>
+                    </a>
+                </header>
+                <div id="giveaway" class="answer is-collapsible">
+                    <p>Winners will receive their prizes once we sell all of all MetaFashion NFT’s.</p>
                 </div>
             </div>
         </section>
