--- a/index.html
+++ b/index.html
@@ -428,14 +428,11 @@
             <div class="block">
                 <header class="question">
                     <a href="#mint" data-action="collapse" data-target="#mint">
-                        When is Minting Day? <i class="fa-solid fa-angle-down"></i>
+                        When is Mint Day? <i class="fa-solid fa-angle-down"></i>
                     </a>
                 </header>
                 <div id="mint" class="block answer is-collapsible">
-                    <ul>
-                        <li>VIP LIST will start on April 28th 2022</li>
-                        <li>PUBLIC will start April 30th 2022</li>
-                    </ul>
+                    <p>Q2 2022: Official Date’s will be announced later</p>
                 </div>
             </div>
             <div class="block">
@@ -447,7 +444,7 @@
                 <div id="cost" class="answer is-collapsible">
                     <ul>
                         <li>VIP LIST will be .075Ξ + Gas</li>
-                        <li>Public will be .085Ξ + Gas</li>
+                        <li>Public Sale will be .085Ξ + Gas</li>
                     </ul>
                 </div>
             </div>
@@ -459,7 +456,7 @@
                 </header>
                 <div id="supply" class="answer is-collapsible">
                     <p class="block">There will be 10,000 MetaFashion NFT’s</p>
-                    <p>Some of the supply will be designated for contests and giveaways within our Community and to award those that help us grow.</p>
+                    <p>Some of the supply will be designated for contests and giveaways within our Community and to award those that help us grow</p>
                 </div>
             </div>
             <div class="block">
@@ -470,19 +467,19 @@
                 </header>
                 <div id="max" class="answer is-collapsible">
                     <ul>
-                        <li>VIP LIST will have a limit of a 3 Mint Transaction Max</li>
-                        <li>PUBLIC SALE will have a limit of 5 Mints per Transaction, for up to 3 transactions.</li>
+                        <li>VIP LIST will have a limit of 3 Mints, one transaction Max</li>
+                        <li>PUBLIC SALE will have a limit of 5 Mints per Transaction, for up to 3 transactions</li>
                     </ul>
                 </div>
             </div>
             <div class="block">
                 <header class="question">
                     <a href="#giveaway" data-action="collapse" data-target="#giveaway">
-                        When will giveaway winners receive their Prizes? <i class="fa-solid fa-angle-down"></i>
+                        When will giveaway winners receive their Prizes?  <i class="fa-solid fa-angle-down"></i>
                     </a>
                 </header>
                 <div id="giveaway" class="answer is-collapsible">
-                    <p>Winners will receive their prizes once we sell all of all MetaFashion NFT’s.</p>
+                    <p>Winners will receive their prizes once we sell out of all Meta Fashion NFT’s</p>
                 </div>
             </div>
         </section>
