--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="has-navbar-fixed-top">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
@@ -601,9 +601,11 @@
         });
 
         // Show site once intro video ends
-        // let intro = document.getElementById('intro');
-        // intro.onended = function () {
+        let intro = document.getElementById('intro');
+        intro.onended = function () {
+
             document.getElementById('landing').style.display = 'none';
+            document.getElementsByTagName('html')[0].classList.add('has-navbar-fixed-top');
             document.getElementById('site').style.display = 'initial';
             bulmaCollapsible.attach();
 
@@ -649,7 +651,7 @@
                     closeAllModals();
                 }
             });
-        // }
+        }
     </script>
 </body>
 </html>
